--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,6 +7,7 @@ on:
 
 env:
   PROJECT_ID: 'nestjs-book-app'
+  GCLOUD_SERVICE_KEY: ${{ secrets.GCLOUD_SERVICE_KEY }}
 
 jobs:
   deploy:
@@ -34,3 +35,12 @@ jobs:
         run: |
           yarn
           yarn build
+      - name: Copy Service Account from Environment
+        run: |
+          echo $GCLOUD_SERVICE_KEY > ${HOME}/gcloud-service-key.json
+      - name: Use cloud-sdk
+        uses: docker://google/cloud-sdk:273.0.0
+      - name: Deploy
+        run: |
+          gcloud auth activate-service-account --key-file=${HOME}/gcloud-service-key.json
+          gcloud app deploy --quiet --project $PROJECT_ID
